@startuml
hide empty methods
hide empty fields
interface "ITaskOwner" {
    +friends : Array<ITaskOwner>
    +id : string
    +ownedTasks : Array<ITaskItem>
}
interface "ICustormer" {
    +id : string
}
"ICustormer" <|-- "ITaskOwner"
class "TaskOwner" {
    +friends : Array<ITaskOwner>
    +id : string
    +ownedTasks : Array<ITaskItem>
}
"ITaskOwner" <|.. "TaskOwner"
@enduml